refactored file structure, fixed leaflet div z-index issue

--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ a:hover {
   position: fixed;
   top: 0px;
   width: 100%;
+  z-index: 1001;
 }
 
 #nav div:first-child {
